--- a/popup/settings.html
+++ b/popup/settings.html
@@ -14,7 +14,8 @@
                 <label for="reminder-delay-input">minutes</label>
                 <input id="reminder-delay-input" type="number">
             </div>
-            <div id="submit-button">Submit</div>
+            <div id="submit-button">Save Changes</div>
         </div>
+        <script src="settings.js"></script>
     </body>
 </html>
